# forex-grpc-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker-image.yml
proto/: forex.proto
src/: forex_service.cpp
